// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open CSIDivisionPicker, dark 1`] = `
{
  "lines": 289,
  "modalCount": 1,
  "sha256": "34b3d09a34e9212b5841b7c94b44bac8f1f24d91c81b8295962bcbfb01a26a12",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open CSIDivisionPicker, light 1`] = `
{
  "lines": 289,
  "modalCount": 1,
  "sha256": "30759848c90fb4f694dff6a04adcd264ba3a54bf5091d8e3511d0c5301b94a01",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open DemoSeedPickerModal, dark 1`] = `
{
  "lines": 210,
  "modalCount": 1,
  "sha256": "e24c35798c03d57f459698aa94fb900a914a03249925356df33793f30c240927",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open DemoSeedPickerModal, light 1`] = `
{
  "lines": 210,
  "modalCount": 1,
  "sha256": "5aef44abd163aba30d7cff92ee6c68df09235a05153fb419425d2f14aafe943e",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open FeatureExplainerSheet, dark 1`] = `
{
  "lines": 49,
  "modalCount": 1,
  "sha256": "e86508eb19a04ca221548c5d16e7960c6706322afb1a332b3d179836b09e383d",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open FeatureExplainerSheet, light 1`] = `
{
  "lines": 49,
  "modalCount": 1,
  "sha256": "fc7ca33d5bac3abeb36d1d2ec55d6f849d603ec4fbc83dd20f41935978627283",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open HelpFab, dark 1`] = `
{
  "lines": 64,
  "modalCount": 1,
  "sha256": "f8a3b8f38142b94a0f9e58c6c2e516fa0dfbfe66239f239cc6253cdec9894e03",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open HelpFab, light 1`] = `
{
  "lines": 64,
  "modalCount": 1,
  "sha256": "19549e4a00e1d57aaafb68fe98921b4692f426c7b7ee226f7167bad5fb315a49",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open JobSwitcher, dark 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "251e20dddf571b677c676c2e7e30d493299b777b15a505360b8cd2130a68ba6c",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open JobSwitcher, light 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "9f54bf6743b824304f061cc623731ff22fb9c17107fa4dd409567a21208584ed",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open PunchPhotoViewer, dark 1`] = `
{
  "lines": 14,
  "modalCount": 1,
  "sha256": "1198646f577c4bcd953c18525816e5cecd070afe11fa6c66fd69791775909b2b",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open PunchPhotoViewer, light 1`] = `
{
  "lines": 14,
  "modalCount": 1,
  "sha256": "1198646f577c4bcd953c18525816e5cecd070afe11fa6c66fd69791775909b2b",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open QuickUpdateClarifier, dark 1`] = `
{
  "lines": 99,
  "modalCount": 1,
  "sha256": "1c7bea3c5c7432bf4b650b3f4edd5de4dc6af44c2fc41d79df3d6ebad9b2add7",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open QuickUpdateClarifier, light 1`] = `
{
  "lines": 99,
  "modalCount": 1,
  "sha256": "429852ad61b4eb9fffdd235412b9f9544d771e6f9acd0761b742c1a32348d089",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open RateProvenanceChip, dark 1`] = `
{
  "lines": 61,
  "modalCount": 1,
  "sha256": "728af712dbf9b875d8caab6ff9b0f592f5ecea9e595faaa937dacfed00c707fc",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open RateProvenanceChip, light 1`] = `
{
  "lines": 61,
  "modalCount": 1,
  "sha256": "dbbaa0283412948154528ca4f6ab65a4c9e4a0be0fd181542e71c06d35616ead",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolbarActions, dark 1`] = `
{
  "lines": 20,
  "modalCount": 1,
  "sha256": "898f61086a4d7625b0de5bcd21dd5d929120f935f093ce3857a37a6f06574a6d",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolbarActions, light 1`] = `
{
  "lines": 20,
  "modalCount": 1,
  "sha256": "e4dd77f2258afa94c98d73b839437d87b3b6f5ecf895588dce9db732f46b2326",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolsSheet, dark 1`] = `
{
  "lines": 202,
  "modalCount": 1,
  "sha256": "6db1ed19e00e8f53594e0fe5c375199e5d9849b0c734f4f9af94c0de28893d90",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolsSheet, light 1`] = `
{
  "lines": 202,
  "modalCount": 1,
  "sha256": "875e0c197c28b079690c4d88083fcb82481dc64984f6e5431beb05dc5077d628",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open VoiceCommandModal, dark 1`] = `
{
  "lines": 89,
  "modalCount": 1,
  "sha256": "470fbd775c2772cf21e4fa7c1af4b54d7724b81263ad8818a5dbecb5cfebc337",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open VoiceCommandModal, light 1`] = `
{
  "lines": 89,
  "modalCount": 1,
  "sha256": "256b6a5d704480004f2998eacd6536c895e60d48ed4b4ccc9684bdc299f30cd7",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag building-access 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 45,
      "sha256": "e727d1fa868b286c33850c0d72d134bb5b327141857c8fbf896e5dffbe736bbc",
      "title": "Book a Slot",
    },
  ],
  "whole": {
    "lines": 439,
    "sha256": "ee60d798eff299594e89a26c200c10cf2a8ee6a85a92e0b82222299dd44e7e20",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag company-profile 1`] = `
{
  "modalCount": 7,
  "sheets": [
    {
      "found": true,
      "lines": 180,
      "sha256": "88f84e910e5d59eda68c4602d7d835c567f608bc8c6a1aa0cef33beeb4a0331c",
      "title": "Which state licenses you?",
    },
    {
      "found": true,
      "lines": 38,
      "sha256": "5273fa913c37c30740f8abebbdcbe5e3ab97fae88d13507d3d80362af02fb355",
      "title": "Draw Your Signature",
    },
  ],
  "whole": {
    "lines": 723,
    "sha256": "6e0eedbf4ec7c450c1522bcebdfe3de5d2240ea0c8fa2735a8231e4008bf9e08",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag discover/bids 1`] = `
{
  "modalCount": 6,
  "sheets": [
    {
      "found": true,
      "lines": 24,
      "sha256": "e02f91c7c61c15a4d160ddf60bff35cf1769d02c4e37fde37e39884491b871ad",
      "title": "Sort By",
    },
    {
      "found": true,
      "lines": 39,
      "sha256": "aafd35217ca1415935f0bdbbea4a0bd626281718fe8ad5937e667a2954dfed7d",
      "title": "Set-Aside Type",
    },
  ],
  "whole": {
    "lines": 608,
    "sha256": "debe6d9ca93ce2ff36ec7450b7ec7671c3e1db8fa810f9cf91fd12a0d6a06931",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag equipment-detail (seeded machine) 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 22,
      "sha256": "185b6b241c293dc514fa73386e9be4ccaab496a4d9fe4298ea1a323dbd7bb5e5",
      "title": "Log Usage",
    },
  ],
  "whole": {
    "lines": 440,
    "sha256": "577ca2dcfd70657b31263a50a53acee20ce58a1af38ade6b89e2d76afa266db5",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag equipment-detail 1`] = `
{
  "modalCount": 4,
  "sheets": [
    {
      "found": false,
      "title": "Log Usage",
    },
  ],
  "whole": {
    "lines": 319,
    "sha256": "6a56d235f4afeac9bdc0e5e9e6d35f95cb5fe9b3cfba5cd780fcf044075a6d87",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag get-verified 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 169,
      "sha256": "064ad2ad081db626f6ed15ebb9e929883c438f2f0b87f9cd1c6ca3f54123b5fb",
      "title": "Issuing State",
    },
  ],
  "whole": {
    "lines": 547,
    "sha256": "4a9ac90a561aa7057184aaef962f3ef9b5f097be4eeb55514c86169320b4219f",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag lead-detail 1`] = `
{
  "modalCount": 8,
  "sheets": [
    {
      "found": true,
      "lines": 36,
      "sha256": "23c9ab801689557c7239620f6dff5fb8b9c01bae2c31e960f7deff2a186c48e4",
      "title": "Why did this one go cold?",
    },
  ],
  "whole": {
    "lines": 610,
    "sha256": "07e1bb7f03baaa194c1cde977e234136e669ea7a46c6afbf79fe8765ee6e8153",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag materials/lumber 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 11,
      "sha256": "714fab972bc7f43d2325e34d2081a32f0b275c456eca9add163564f1dd27b6cb",
      "title": "Set Price Alert",
    },
  ],
  "whole": {
    "lines": 1657,
    "sha256": "8a438aff7d7c85de2182aee6859a9d1fbb2bd1eaff94fda27a80c4fd99ed2f1b",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag plan-intelligence 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": false,
      "title": "Save room",
    },
  ],
  "whole": {
    "lines": 387,
    "sha256": "8a4484d29ee7b5b7cbdb797ca8c2d685ab4908f562c9303976717e97925bc4fa",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag qbo-review 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 21,
      "sha256": "8ef63deda8e396f36393d130fccaa476f8d3ee8adfac2d05c36330d579d7c8b1",
      "title": "Which project is this cost for?",
    },
  ],
  "whole": {
    "lines": 360,
    "sha256": "fdccbf3c3984b48fcf3dbd525508c4049eb0a8a7c614f6c514c370ddfb512edb",
  },
}
`;
